# scikit-stan

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  api.html  examples.html  genindex.html  getting-started.html  index.html  internal_api.html  objects.inv  pyproject.toml  requirements-test.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: build-docs.yaml  build-wheels.yaml  main.yaml
_modules/: index.html
_modules/scikit_stan/: modelcore.html
_sources/: api.rst.txt  getting-started.rst.txt
docs/: .buildinfo  api.html  conf.py  env.yml  examples.html  examples.rst  genindex.html  getting-started.html  index.html  index.rst  internal_api.html  objects.inv  search.html  searchindex.js
docs/_modules/: index.html
docs/_sources/: api.rst.txt  examples.rst.txt  getting-started.rst.txt  internal_api.rst.txt
docs/examples/: Comparing Linear Bayesian Regressors.ipynb  Gamma Bloodclotting.html  Gamma Bloodclotting.ipynb  Hyperparameter Optimization.html  Hyperparameter Optimization.ipynb
docsrc/: Makefile  api.rst  conf.py  env.yml  examples.rst  getting-started.rst  index.rst  internal_api.rst
docsrc/examples/: Comparing Linear Bayesian Regressors.ipynb  Gamma Bloodclotting.ipynb  Hyperparameter Optimization.ipynb  Hyperparameter Optimization.ipynb-disabled  scikit-learn Pipeline.ipynb  scikit-learn Pipeline.ipynb-disabled
examples/: Comparing Linear Bayesian Regressors.html  Comparing Linear Bayesian Regressors.ipynb  Gamma Bloodclotting.html  Gamma Bloodclotting.ipynb
scikit_stan/: __init__.py  _version.py  exceptions.py  modelcore.py
scikit_stan/beta_regression/: __init__.py-disabled  betareg.py  betareg.py-disabled
scikit_stan/generalized_additive_model/: gamm.py  gamm.py-disabled
scikit_stan/generalized_linear_regression/: glm.py
scikit_stan/stan_files/: common.stan  glm_binomial.stan  glm_continuous.stan  glm_discrete.stan  glm_v_continuous.stan  glm_v_discrete.stan  tests.stanfunctions  wienerftp.stan
scikit_stan/utils/: __init__.py  prior_config.py  stan.py  validation.py
scikit_stan/wienerfpt/: __init__.py  __init__.py-disabled  wfpt.py  (+1 more)
sk_stan_regression/: __init__.py  exceptions.py  modelcore.py
src/: __init__.py  blrmodel.py
test/: conftest.py  test_blr.py  test_glm.py  test_validation.py  test_wfpt.py  test_wfpt.py-disabled
tests/: test_blr.py  test_package.py
(+69 files in other folders)
