[build-system]
requires = ["setuptools", "wheel", "cmdstanpy>=1.0.4"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
disallow_any_generics = true
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true
warn_redundant_casts = true
strict_equality = true
disallow_untyped_calls = true

[[tool.mypy.overrides]]
module = [
    'scipy',
    'scipy.stats',
    'scipy.sparse',
    ]
ignore_missing_imports = true
