[metadata]
name = sk_stan_regression
version = 0.0.1
author = Alexey Izmailov, Brian Ward
long_description = file: README.md
license = BSD 3-Clause License
url = https://github.com/WardBrian/sk-stan-regression

[options]
packages = find:
include_package_data = True

install_requires =
    cmdstanpy>=1.0.1
    numpy>=1.21.0

[options.package_data]
* =
    *.stan
sk_stan_regression =
    py.typed

[options.extras_require]
test =
    flake8
    pytest
    pytest-cov
    pytest-order
    mypy
    black==22.3.0
    scikit_learn
