[metadata]
name = scikit_stan
version = 0.0.1
author = Alexey Izmailov, Brian Ward
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
url = https://github.com/WardBrian/scikit-stan

[options]
packages = find:
include_package_data = True

install_requires =
    cmdstanpy>=1.0.1
    numpy>=1.21.0

[options.package_data]
* =
    *.stan
scikit_stan =
    py.typed

[options.extras_require]
test =
    flake8
    pytest
    pytest-cov
    pytest-order
    mypy
    black==22.3.0
    scikit_learn


[flake8]
ignore = E265, E127,E201,E202,E203,E231,E252,E266,E402,E999,F841,W503,W605, W291
max-line-length = 100
exclude = .git
